[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/prototipos/characters_sprites/big_zombie_idle_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://dani_sandbox/scripts/menu/CharactertMenu_a.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/cards_ilustrations/ilustration_placeholder.png" type="Texture" id=3]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 75
custom_constants/margin_top = 75
custom_constants/margin_left = 75
custom_constants/margin_bottom = 75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Container"]
margin_left = 75.0
margin_top = 75.0
margin_right = 949.0
margin_bottom = 525.0
tab_align = 0

[node name="PanelPJ" type="PanelContainer" parent="Container/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBox" type="HBoxContainer" parent="Container/TabContainer/PanelPJ"]
margin_left = 7.0
margin_top = 7.0
margin_right = 859.0
margin_bottom = 407.0
size_flags_stretch_ratio = 0.0
custom_constants/separation = 15

[node name="Equipo" type="MarginContainer" parent="Container/TabContainer/PanelPJ/HBox"]
margin_right = 60.0
margin_bottom = 400.0

[node name="Background" type="TextureRect" parent="Container/TabContainer/PanelPJ/HBox/Equipo"]
margin_top = 183.0
margin_right = 60.0
margin_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="ItemsIzq" type="HBoxContainer" parent="Container/TabContainer/PanelPJ/HBox/Equipo"]
margin_top = 115.0
margin_right = 60.0
margin_bottom = 285.0
size_flags_vertical = 4

[node name="Items" type="GridContainer" parent="Container/TabContainer/PanelPJ/HBox/Equipo/ItemsIzq"]
margin_right = 60.0
margin_bottom = 170.0
custom_constants/vseparation = 10

[node name="TextureRect2" type="TextureRect" parent="Container/TabContainer/PanelPJ/HBox/Equipo/ItemsIzq/Items"]
margin_right = 60.0
margin_bottom = 50.0
texture = ExtResource( 3 )

[node name="TextureRect4" type="TextureRect" parent="Container/TabContainer/PanelPJ/HBox/Equipo/ItemsIzq/Items"]
margin_top = 60.0
margin_right = 60.0
margin_bottom = 110.0
texture = ExtResource( 3 )

[node name="TextureRect3" type="TextureRect" parent="Container/TabContainer/PanelPJ/HBox/Equipo/ItemsIzq/Items"]
margin_top = 120.0
margin_right = 60.0
margin_bottom = 170.0
texture = ExtResource( 3 )

[node name="ItemsDrch" type="HBoxContainer" parent="Container/TabContainer/PanelPJ/HBox/Equipo"]
margin_top = 115.0
margin_right = 60.0
margin_bottom = 285.0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
alignment = 2

[node name="Items" type="GridContainer" parent="Container/TabContainer/PanelPJ/HBox/Equipo/ItemsDrch"]
margin_right = 60.0
margin_bottom = 170.0
custom_constants/vseparation = 10

[node name="TextureRect" type="TextureRect" parent="Container/TabContainer/PanelPJ/HBox/Equipo/ItemsDrch/Items"]
margin_right = 60.0
margin_bottom = 50.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="Container/TabContainer/PanelPJ/HBox/Equipo/ItemsDrch/Items"]
margin_top = 60.0
margin_right = 60.0
margin_bottom = 110.0
texture = ExtResource( 3 )

[node name="TextureRect3" type="TextureRect" parent="Container/TabContainer/PanelPJ/HBox/Equipo/ItemsDrch/Items"]
margin_top = 120.0
margin_right = 60.0
margin_bottom = 170.0
texture = ExtResource( 3 )

[node name="VSeparator" type="VSeparator" parent="Container/TabContainer/PanelPJ/HBox"]
margin_left = 75.0
margin_right = 79.0
margin_bottom = 400.0

[node name="Stats" type="MarginContainer" parent="Container/TabContainer/PanelPJ/HBox"]
margin_left = 94.0
margin_right = 188.0
margin_bottom = 400.0

[node name="VBox" type="VBoxContainer" parent="Container/TabContainer/PanelPJ/HBox/Stats"]
margin_right = 94.0
margin_bottom = 400.0
alignment = 1

[node name="Items" type="CenterContainer" parent="Container/TabContainer/PanelPJ/HBox/Stats/VBox"]
margin_top = 191.0
margin_right = 94.0
margin_bottom = 191.0

[node name="Grid" type="GridContainer" parent="Container/TabContainer/PanelPJ/HBox/Stats/VBox/Items"]
margin_left = 47.0
margin_right = 47.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 6

[node name="Stats" type="CenterContainer" parent="Container/TabContainer/PanelPJ/HBox/Stats/VBox"]
margin_top = 195.0
margin_right = 94.0
margin_bottom = 209.0

[node name="Text" type="Label" parent="Container/TabContainer/PanelPJ/HBox/Stats/VBox/Stats"]
margin_right = 94.0
margin_bottom = 14.0
text = "AsdASDasdasd"
align = 1

[node name="Mazo" type="PanelContainer" parent="Container/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="Container/TabContainer/Mazo"]
margin_left = 7.0
margin_top = 7.0
margin_right = 859.0
margin_bottom = 407.0
custom_constants/separation = 10

[node name="HBoxCartas" type="HBoxContainer" parent="Container/TabContainer/Mazo/VBox"]
margin_right = 852.0
margin_bottom = 3.0
size_flags_stretch_ratio = 0.0
custom_constants/separation = 15
alignment = 1

[node name="Colleccion" type="MarginContainer" parent="Container/TabContainer/Mazo/VBox/HBoxCartas"]
margin_bottom = 3.0
grow_horizontal = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Container/TabContainer/Mazo/VBox/HBoxCartas/Colleccion"]
margin_bottom = 3.0
scroll_horizontal_enabled = false

[node name="Grid" type="GridContainer" parent="Container/TabContainer/Mazo/VBox/HBoxCartas/Colleccion/ScrollContainer"]
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 4

[node name="VSeparator" type="VSeparator" parent="Container/TabContainer/Mazo/VBox/HBoxCartas"]
margin_left = 15.0
margin_right = 19.0
margin_bottom = 3.0

[node name="Cartas" type="MarginContainer" parent="Container/TabContainer/Mazo/VBox/HBoxCartas"]
margin_left = 34.0
margin_right = 852.0
margin_bottom = 3.0
grow_horizontal = 0
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Container/TabContainer/Mazo/VBox/HBoxCartas/Cartas"]
margin_right = 818.0
margin_bottom = 3.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Container/TabContainer/Mazo/VBox/HBoxCartas/Cartas/ScrollContainer"]
grow_horizontal = 0
custom_constants/separation = 5
alignment = 1

[node name="HBoxBotones" type="HBoxContainer" parent="Container/TabContainer/Mazo/VBox"]
margin_top = 13.0
margin_right = 852.0
margin_bottom = 33.0
custom_constants/separation = 50
alignment = 1

[node name="Guardar" type="Button" parent="Container/TabContainer/Mazo/VBox/HBoxBotones"]
margin_left = 395.0
margin_right = 456.0
margin_bottom = 20.0
text = "Aceptar"

[node name="Cerrar" type="Button" parent="."]
anchor_left = 0.927
anchor_top = 0.165
anchor_right = 0.927
anchor_bottom = 0.165
margin_left = -14.0948
margin_top = -16.1428
margin_right = 14.9052
margin_bottom = 7.85723
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Container/TabContainer/Mazo/VBox/HBoxBotones/Guardar" to="." method="_on_Aceptar_pressed"]
[connection signal="pressed" from="Cerrar" to="." method="_on_Cerrar_pressed"]
